tests/src/frontend/typechecking/invalid/this_as_constraint.sk
base class Foo<T: this>
class Bar() extends Foo<this>
